<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 🏷️ Titre -->
        <TextView
            android:id="@+id/monthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_selected"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/monthPhoto"/>

        <Button
            android:id="@+id/captureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_photo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/location_title"/>

        <fragment
            android:layout_width="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/addressFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/address_found" />
    </LinearLayout>



</ScrollView>